# Data-Engineering-ZoomCamp-2026

./: .gitignore  README.md
1-docker-terraform/pipeline/: create_db_on_nw_run_on_pgadmin_ui.txt  docker_command_create_database.txt  ingest_data_run_command.txt
1-docker-terraform/pipeline/1-homework/: 1-homework.sql  Dockerfile  ingest_data_parquet_homework.py  ingest_data_run_command.txt  notebook.ipynb  process_steps.txt  pyproject.toml
pipeline/: Dockerfile  docker-compose.yaml  docker_command_create_database.txt  ingest_data.py  ingest_data_run_command.txt  notebook.ipynb  pipeline.py  pyproject.toml
