[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alchemy>=20.5",
    "jupyter>=1.1.1",
    "jupyter-server>=2.17.0",
    "notebook>=6.5.7",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "sql>=2022.4.0",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyter-server>=2.17.0",
    "jupyterlab>=3.5.3",
    "notebook>=6.5.4",
    "pgcli>=4.4.0",
]
